Fix: Selector for cropped image container

--- a/styles/programs.scss
+++ b/styles/programs.scss
@@ -13,7 +13,7 @@
 }
 
 /* Image alignment */
-.programs-programming-list .img-with-aniamtion-wrap {
+.programs-programming-list .img-with-aniamtion-wrap .hover-wrap {
   overflow: hidden; /* Needed for the img's position: absolute to work */
 }
 
